# fujinet-go-800

./: .gitignore  CHANGELOG.md  COMPLIANCE.md  README.md  THIRD_PARTY_NOTICES.md  settings.gradle.kts  zapstore.yaml
app/: build.gradle.kts
app/src/androidTest/java/com/mantismoonlabs/fujinetgo800/input/: InputControlsScreenTest.kt
app/src/androidTest/java/com/mantismoonlabs/fujinetgo800/session/: FujiNetBootRecoveryShellTest.kt  SessionLaunchModesShellTest.kt  SessionShellLifecycleTest.kt
app/src/androidTest/java/com/mantismoonlabs/fujinetgo800/settings/: ShellSettingsScreenTest.kt
app/src/androidTest/java/com/mantismoonlabs/fujinetgo800/storage/: SessionLocalMediaShellTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  atari_core.cpp  atari_log_sink.cpp  atari_log_sink.h  fujinet_android.cpp  session_runtime.cpp  session_runtime.h
app/src/main/cpp/atari800_support/: codecs_stub.c  config.h  file_export_stub.c  platform_stub.c  ui_stub.c
app/src/main/java/com/mantismoonlabs/fujinetgo800/: MainActivity.kt
app/src/main/java/com/mantismoonlabs/fujinetgo800/core/: EmulatorNative.kt
app/src/main/java/com/mantismoonlabs/fujinetgo800/fujinet/: FujiNetModels.kt  FujiNetService.kt  FujiNetServiceBridge.kt  FujiNetSettingsBridge.kt  FujiNetWebViewActivity.kt
app/src/main/java/com/mantismoonlabs/fujinetgo800/input/: AndroidAtariKeyMapper.kt  AtariKeyCode.kt  GameControllerMapper.kt  HardwareKeyboardRouter.kt
app/src/main/java/com/mantismoonlabs/fujinetgo800/notifications/: NotificationStartupGate.kt
app/src/main/java/com/mantismoonlabs/fujinetgo800/session/: EmulationFrameProducer.kt  EmulatorAudioPlayer.kt  EmulatorSessionService.kt  FujiNetBundledAssetLoader.kt  LaunchSettingsViewModel.kt  SessionModels.kt  SessionRecoveryStore.kt  SessionRepository.kt  ShellViewModel.kt
app/src/main/java/com/mantismoonlabs/fujinetgo800/settings/: EmulatorSettings.kt  EmulatorSettingsRepository.kt  HostDisplaySettings.kt
app/src/main/java/com/mantismoonlabs/fujinetgo800/storage/: BundledAssetInstaller.kt  FujiNetRuntimeAssetInstaller.kt  LocalMediaViewModel.kt  MediaApplyUseCase.kt  MediaDocumentStore.kt  MediaSelection.kt  RuntimePaths.kt  SystemRomDocumentStore.kt
app/src/main/java/com/mantismoonlabs/fujinetgo800/ui/: EmulatorRenderHost.kt  EmulatorScreen.kt  NotificationPermissionGateScreen.kt  ShellButton.kt
app/src/main/res/drawable/: ic_disk_swap.xml  ic_inverse.xml  ic_joystick.xml  ic_keyboard.xml  ic_pause.xml  ic_play.xml  ic_reset.xml  ic_settings_gear.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_provider_paths.xml
app/src/oss/res/values/: branding.xml
app/src/test/java/com/mantismoonlabs/fujinetgo800/fujinet/: FujiNetServiceBridgeTest.kt
app/src/test/java/com/mantismoonlabs/fujinetgo800/input/: AndroidAtariKeyMapperTest.kt  GameControllerMapperTest.kt  HardwareKeyboardRouterTest.kt  InputSettingsRepositoryTest.kt  TouchJoystickDispatcherTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
tools/atari800/: build-atari800-source.sh
tools/atari800/patches/: 0001-increase-netsio-startup-timeout.patch  0002-add-android-atari-log-file-hook.patch
tools/fujinet/: build-fujinet.sh
tools/fujinet/patches/: 0001-fix-create-path-buffer-overflow.patch  0002-route-sam-audio-through-android-host.patch
tools/fujinet/support/: fujinet_android_entry.cpp
(+29 files in other folders)
